Adding what I have from auth and updated swagger
